Updated Tree of Might Unofficial FAQ

--- a/cards/BT12-082.md
+++ b/cards/BT12-082.md
@@ -21,6 +21,38 @@ Skills:
 > [Activate Main] `If your Leader Card is a 《Turles Crusher Corps》 card : Place this card in your opponent's Battle Area in Active Mode.`
 
 
+### Unofficial FAQ:
+#### 1
+> Can I select {BT12-082 The Tree of Might} as the cost for {P-105 Paragus, the Sacrafice}'s Activate: Main ability even though {BT12-082 The Tree of Might} can't be sent to the drop?
+
+![Paragus, the Sacrifice](http://www.dbs-cardgame.com/images/cardlist/cardimg/P-105.png)
+
+Answer
+> TLDR: No
+>
+> ~
+> 
+>In order to activate a skill you must first pay the full cost of the skill, typically indicated by a colon `:`
+> 
+> The cost for {P-105 Paragus, the Sacrafice}'s skill is `Choose 1 green card from your Battle Area other than this card and place it in your Drop Area ` 
+> 
+> Because of {BT12-082 The Tree of Might}'s Permanent skill not allowing it to be placed in the drop the full cost cannot be paid, and thus you cannot activate and resolve the skill.
+
+Sources: 
+
+[Rules][2]
+> 8-1-3. [Activate] skills are skills that a player
+  can activate by paying the skill cost
+  and fulfilling its conditions when
+  granted a free timing.
+>
+> 8-1-3-1.[Activate] skills are described on card text in the
+  following formats: “[Activate: Main] skill cost: effect,”
+  [Activate: Battle] skill cost: effect,” and “[Activate:
+  Main/Battle] skill cost: effect.” The text before the colon
+  is the skill cost necessary to activate the [Activate] skill,
+  and the following text is the actual effect of the text. 
+
 
 
 ### [Official FAQ][1]: 
