Updated Tree of Might Questions

--- a/cards/BT12-082.md
+++ b/cards/BT12-082.md
@@ -53,6 +53,46 @@ Sources:
   is the skill cost necessary to activate the [Activate] skill,
   and the following text is the actual effect of the text. 
 
+#### 2
+> Can I choose {BT12-082 The Tree of Might} as the target for {BT1-057 Broly, The Legendary Super Saiyan}'s Auto?
+
+![Broly, The Legendary Super Saiyan](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-057_b.png)
+
+Answer:
+> TLDR: Yes you can choose it, {BT12-082 The Tree of Might} will stay in the battle zone, and you will discard 1 card from your hand, but your opponent will still have to choose and send 1 card from their battle zone and hand to the drop.
+> 
+>~
+> 
+> There is no effect on {BT12-082 The Tree of Might} that would prevent a card from choosing it as the target of a skill, and sending the chosen card to the drop is not a cost of {BT1-057 Broly, The Legendary Super Saiyan}'s skill, but the effect of the skill.
+>
+> Dragon Ball Super requires that once an ability is activate that you complete as much of the ability as possible.
+>
+> This means that even if parts of the ability are impossible to complete, like sending {BT12-082 The Tree of Might} to the drop, you still do everything else that is possible in the skill. 
+>
+> So if your opponent can choose a card in their battle zone they would still have to send said card to the drop.
+>
+> This is also why if you are playing {BT1-057 Broly, The Legendary Super Saiyan} and have {BT1-081 Broly's Ring} in the battle zone when you activate {BT1-057 Broly, The Legendary Super Saiyan}'s Auto you don't have to discard a card, but your opponent still has to do so.
+>
+> That being said if you have both {BT12-082 The Tree of Might} and {BT1-081 Broly's Ring} in the battle zone, you could activate {BT1-057 Broly, The Legendary Super Saiyan}'s auto without discarding a card from your hand, or sending a card in the battle zone to the drop, while your opponent still has to do both.
+
+![Broly's Ring](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-081.png)
+
+Sources: 
+
+[rules][2]
+> 1-3-2. If a player is requested to perform and
+  impossible act due to some reason,
+  that act will not be carried out.
+  Likewise, if an effect requests a player
+  to carry out a certain amount of
+  actions and some of those actions are
+  not fully possible, conduct as much of
+  the requested actions as possible
+
+[FAQ][1]:
+
+[Broly's Ring Interaction](./BT1-057.md#Q5)
+
 
 
 ### [Official FAQ][1]: 
