--- a/cards/BT1-057.md
+++ b/cards/BT1-057.md
@@ -53,33 +53,33 @@ Era: Broly Saga
 
 ### [Official FAQ][1]: 
 #### Q1
-> When you attack your opponent’s Leader Card with {BT1-057 Broly, The Legendary Super Saiyan}, can the opponent activate the [Blocker] skill on one of their Battle Cards?
+> When you attack your opponent’s Leader Card with [[{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan)](BT1-057 Broly | Broly, The Legendary Super Saiyan), can the opponent activate the [Blocker] skill on one of their Battle Cards?
 
 Answer
 > Yes, they can.
-  In this case, {BT1-057 Broly, The Legendary Super Saiyan} would battle the opponent’s Battle Card with [Blocker].
+  In this case, [{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan) would battle the opponent’s Battle Card with [Blocker].
 
 #### Q2
-> Can you choose not to draw cards with {BT1-057 Broly, The Legendary Super Saiyan}’s auto skill?
+> Can you choose not to draw cards with [{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan)’s auto skill?
 
 Answer
 > No, you cannot.
   You must draw a card. 
 
 #### Q3
-> Can you use {BT1-057 Broly, The Legendary Super Saiyan}’s skill to place a card in the Battle Area with [Field] into the Drop Area?
+> Can you use [{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan)’s skill to place a card in the Battle Area with [Field] into the Drop Area?
 
 Answer
 > Yes, you can.
 
 #### Q4
-> When {BT1-057 Broly, The Legendary Super Saiyan}’s auto skill activates, both players discard a card from their hands into the Drop Area. Which player discards first?
+> When [{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan)’s auto skill activates, both players discard a card from their hands into the Drop Area. Which player discards first?
 
 Answer
 > Both players discard a card from their hand into the Drop Area simultaneously.
 
 #### Q5
-> When {BT1-057 Broly, The Legendary Super Saiyan} attacks, you have {BT1-081 Broly's Ring} in the Battle Area, so you don’t place a card from your hand into the Drop Area. In this case, does the opponent still place cards from their hand and Battle Area into the Drop Area?
+> When [{BT1-057 Broly, The Legendary Super Saiyan}](#bt1-057-broly--broly-the-legendary-super-saiyan) attacks, you have {BT1-081 Broly's Ring} in the Battle Area, so you don’t place a card from your hand into the Drop Area. In this case, does the opponent still place cards from their hand and Battle Area into the Drop Area?
 
 ![Broly's Ring](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-081.png)
 
