--- a/cards/BT12-082.md
+++ b/cards/BT12-082.md
@@ -23,7 +23,7 @@ Skills:
 
 ### Unofficial FAQ:
 #### 1
-> Can I select [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) as the cost for {P-105 Paragus, the Sacrafice}'s Activate: Main ability even though [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) can't be sent to the drop?
+> Can I select [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) as the cost for {P-105 Paragus, the Sacrafice}'s Activate: Main ability even though [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) can't be sent to the drop?
 
 ![Paragus, the Sacrifice](http://www.dbs-cardgame.com/images/cardlist/cardimg/P-105.png)
 
@@ -36,7 +36,7 @@ Answer
 > 
 > The cost for {P-105 Paragus, the Sacrafice}'s skill is `Choose 1 green card from your Battle Area other than this card and place it in your Drop Area ` 
 > 
-> Because of [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might)'s Permanent skill not allowing it to be placed in the drop the full cost cannot be paid, and thus you cannot activate and resolve the skill.
+> Because of [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might)'s Permanent skill not allowing it to be placed in the drop the full cost cannot be paid, and thus you cannot activate and resolve the skill.
 
 Sources: 
 
@@ -54,26 +54,26 @@ Sources:
   and the following text is the actual effect of the text. 
 
 #### 2
-> Can I choose [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) as the target for {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s Auto?
+> Can I choose [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) as the target for {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s Auto?
 
 ![Broly, The Legendary Super Saiyan](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-057_b.png)
 
 Answer:
-> TLDR: Yes you can choose it, [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) will stay in the battle zone, and you will discard 1 card from your hand, but your opponent will still have to choose and send 1 card from their battle zone and hand to the drop.
+> TLDR: Yes you can choose it, [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) will stay in the battle zone, and you will discard 1 card from your hand, but your opponent will still have to choose and send 1 card from their battle zone and hand to the drop.
 > 
 >~
 > 
-> There is no effect on [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) that would prevent a card from choosing it as the target of a skill, and sending the chosen card to the drop is not a cost of {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s skill, but the effect of the skill.
+> There is no effect on [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) that would prevent a card from choosing it as the target of a skill, and sending the chosen card to the drop is not a cost of {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s skill, but the effect of the skill.
 >
 > Dragon Ball Super requires that once an ability is activate that you complete as much of the ability as possible.
 >
-> This means that even if parts of the ability are impossible to complete, like sending [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) to the drop, you still do everything else that is possible in the skill. 
+> This means that even if parts of the ability are impossible to complete, like sending [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) to the drop, you still do everything else that is possible in the skill. 
 >
 > So if your opponent can choose a card in their battle zone they would still have to send said card to the drop.
 >
 > This is also why if you are playing {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)} and have {BT1-081 Broly's Ring} in the battle zone when you activate {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s Auto you don't have to discard a card, but your opponent still has to do so.
 >
-> That being said if you have both [{BT12-082 The Tree of Might}](#BT12-082 The Tree of Might) and {BT1-081 Broly's Ring} in the battle zone, you could activate {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s auto without discarding a card from your hand, or sending a card in the battle zone to the drop, while your opponent still has to do both.
+> That being said if you have both [{BT12-082 The Tree of Might}](#bt12-082-the-tree-of-might) and {BT1-081 Broly's Ring} in the battle zone, you could activate {[BT1-057 Broly, The Legendary Super Saiyan](./BT1-057.md)}'s auto without discarding a card from your hand, or sending a card in the battle zone to the drop, while your opponent still has to do both.
 
 ![Broly's Ring](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-081.png)
 
