Answered question on Hit Zen-oh interaction

--- a/cards/BT9-093.md
+++ b/cards/BT9-093.md
@@ -42,6 +42,24 @@ Special Traits: Alien/Universe 6
 Era: Universe Survival Saga
 
 
+### Unofficial FAQ:
+#### 1
+> If I have 7 or more blue or yellow Battle Cards in play, and my leader card is [{EX03-25 Zen-Oh | Zen-Oh, Ruler of the Universe}](./EX03-25.md) can I play this card for free?
+
+![Zen-oh](http://www.dbs-cardgame.com/images/cardlist/cardimg/EX03-25.png)
+![Zen-Oh, ruler of the universe](http://www.dbs-cardgame.com/images/cardlist/cardimg/EX03-25_b.png)
+
+Answer
+> TLDR: Yes
+>
+> ~
+> 
+> Usually [{BT9-093 Hit, in Cold Blood}](./BT9-093.md)'s permanent can only lower its cost to (🔵🔵🟡🟡) as it's permanent is not able to remove those specific costs.
+>
+> [{EX03-25 Zen-Oh | Zen-Oh, Ruler of the Universe}](#ex03-25-zen-oh--zen-oh-ruler-of-the-universe)'s permanent removes all specific costs from [{BT9-093 Hit, in Cold Blood}](./BT9-093.md) allowing its permanent to lower its total cost to 0. 
+
+
+
 ### [Official FAQ][1]: 
 #### Q1
 > If you have 5 or more blue or yellow Battle Cards in play, can you use your {P-184 Kefla}’s activate skill to play this card from your hand?
