--- a/cards/EX03-25.md
+++ b/cards/EX03-25.md
@@ -62,6 +62,23 @@ Special Traits: God
 Era: Universe Survival Saga
 
 
+
+### Unofficial FAQ:
+#### 1
+> If I have 7 or more blue or yellow Battle Cards in play, can I play [{BT9-093 Hit, in Cold Blood}](./BT9-093.md) for free?
+
+![Hit, in cold blood](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT9-093.png)
+
+Answer
+> TLDR: Yes
+>
+> ~
+> 
+> Usually [{BT9-093 Hit, in Cold Blood}](./BT9-093.md)'s permanent can only lower its cost to (🔵🔵🟡🟡) as it's permanent is not able to remove those specific costs.
+>
+> [{EX03-25 Zen-Oh | Zen-Oh, Ruler of the Universe}](#ex03-25-zen-oh--zen-oh-ruler-of-the-universe)'s permanent removes all specific costs from [{BT9-093 Hit, in Cold Blood}](./BT9-093.md) allowing its permanent to lower its total cost to 0. 
+
+
 ### [Official FAQ][1]: 
 #### Q1
 > Can you activate this card’s [Awaken] skill when all of your energy is in Active Mode?
