Added Auto activation question

--- a/cards/BT13-002.md
+++ b/cards/BT13-002.md
@@ -59,10 +59,55 @@ Special Traits: Saiyan/Vegeta's Lineage
 
 Era: DBS : Broly Saga
 
+### Unofficial FAQ:
+#### 1
+> Does [{King Vegeta, Head of the Saiyan Rebellion}](#bt13-002-king-vegeta--king-vegeta-head-of-the-saiyan-rebellion)'s once per turn auto have to activate the first time I decrease a cards power or can I wait to activate it later in the turn?
 
+Answer
+> TLDR: It must be resolved the first time one of your opponents cards have their power decreased.
+>
+> ~
+> Auto's are typically formatted with either a cost and a condition, or just a condition in which they trigger.
+>
+> Any time the trigger for a cards auto is fulfilled the cards auto enters pending.
+>
+> At the next checkpoint all auto's in pending can be activated in the order of your choosing.
+> 
+> If the auto has a cost that is not already fulfilled the player must pay the remaining cost to activate and resolve the skill, otherwise the skills costs are not fulfilled and it cannot be activated, leaving pending.
+>
+> If the cost of the card is already fulfilled, like say "If your leader is blue:," and your leader is blue the cost is fulfilled during the checkpoint, and the auto must activate.
+>
+> For this card there is no cost for his Auto, and thus the first checkpoint that occurs in which the auto is in pending (which will occur the first time you decrease an opponents power) it must be resolved.
 
+Sources:
 
+[Rules][2]:
+Auto Formats
+> 8-1-5-1.[Auto] skills are described on card text in the following
+  formats: “[Auto] When (condition) do (effect)” or “[Auto]
+  At the beginning of the (phase or step), do (effect)” or
+  “[Auto] At the end of the (phase or step), do (effect).”
+  The (condition) and (phase or step) parts are called
+  trigger conditions. 
+>
+>8-1-5-2.Some [Auto] skills are described in card text using the
+  following format: “[Auto] Skill cost: (effect)”.
+> 
+>8-1-5-2-1. If the skill costs for an [Auto] skill aren’t
+  paid, the skill doesn’t resolve, and nothing
+  happens.
 
+Resolving Autos
+> 8-6.Resolving [Auto] Skills
+  >
+>8-6-1. [Auto] skills are skills that
+  automatically activate at the
+  checkpoint which occurs when a
+  specific trigger condition occurs.
+  >
+>8-6-2. When the trigger condition of an [Auto]
+  skill is fulfilled, that [Auto] skill is made
+  pending.
 
 [1]: http://www.dbs-cardgame.com/us-en/rule/card_faq.php
 [2]: http://www.dbs-cardgame.com/pdf/rulemanual.pdf?ver_1.18_2
