--- a/cards/BT10-035.md
+++ b/cards/BT10-035.md
@@ -31,7 +31,7 @@ Power: 9000
 
 ### Unofficial FAQ:
 #### 1
-> Can I still activate this cards +2 marker skill if I am unable to add cards to my energy, or might not be able to add the top card of my deck to my energy due to a restriction like [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate Main]
+> Can I still activate this cards +2 marker skill if I am unable to add cards to my energy, or might not be able to add the top card of my deck to my energy due to a restriction like [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md)'s [Activate Main]
 
 ![Goku Black, Future Decimator](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT10-051.png)
 
@@ -44,12 +44,12 @@ Answer
 > 
 > The rules state that even if one action on a skill is impossible to carry out, you still continue and attempt to resolve as much of the skill as possible.
 >
-> The interaction with [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) and [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) could go one of two ways.
+> The interaction with [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) and [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md) could go one of two ways.
 >
 > 1 (The top card of your deck is able to be added to your energy)
 >
-> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
-> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate main]
+> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
+> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md)'s [Activate main]
 > - You Activate [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison)'s +2 marker ability
 >  - The top card of your deck is a mono-blue 〈Zamasu〉 or 〈Goku Black〉 card
 >  - You add the card to your energy
@@ -59,8 +59,8 @@ Answer
 >
 > 2 (The top card of your deck is not able to be added to your energy)
 >
-> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
-> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate main]
+> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
+> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md)'s [Activate main]
 > - You Activate [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison)'s +2 marker ability
 >  - The top card of your deck is **NOT** a mono-blue 〈Zamasu〉 or 〈Goku Black〉 card
 >  - You are unable to add the card to your energy, it is sent to the drop.
