--- a/cards/BT10-035.md
+++ b/cards/BT10-035.md
@@ -1,5 +1,5 @@
 #  BT10-035 Zen-Oh, Cosmic Unison
-![Zen-Oh, Cosmic Unison](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT10-035.png)
+![Zen-Oh, Cosmic Unison](http://www.mdbs-cardgame.com/images/cardlist/cardimg/BT10-035.png)
 
 [Back To Card List](./index.md)
 ### Details 
@@ -31,41 +31,24 @@ Power: 9000
 
 ### Unofficial FAQ:
 #### 1
-> Can I still activate this cards +2 marker skill if I am unable to add cards to my energy, or might not be able to add the top card of my deck to my energy due to a restriction like [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate Main]
-
-![Goku Black, Future Decimator](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT10-051.png)
+> Can I still activate this cards +2 marker skill if I am unable to add cards to my energy by another card effect?
 
 Answer
 > TLDR: Yes you can activate the skill, but you might not be able to complete the full effect of that skill.
 >
 > ~
 > As long as you are able to pay the cost of a skill, you are able to activate it, even if you know the effect of the skill is impossible at the time.
-> So in the case of a card like [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) if you fulfill the cost of your leader card being mono blue and you increase it's markers by 2 the skill will activate and attempt to resolve.
-> 
+>
 > The rules state that even if one action on a skill is impossible to carry out, you still continue and attempt to resolve as much of the skill as possible.
 >
-> The interaction with [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) and [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) could go one of two ways.
+> The interaction with [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) and [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md) for example would go like this.
 >
-> 1 (The top card of your deck is able to be added to your energy)
 >
-> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
-> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate main]
+> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
+> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.md)'s [Activate main]
 > - You Activate [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison)'s +2 marker ability
->  - The top card of your deck is a mono-blue 〈Zamasu〉 or 〈Goku Black〉 card
->  - You add the card to your energy
->  - You cannot add any more cards to your energy for the rest of the turn
->  - At the end of turn the mono-blue 〈Zamasu〉 or 〈Goku Black〉 card you added is sent to the drop.
->
->
-> 2 (The top card of your deck is not able to be added to your energy)
->
-> - You have [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d) in your hand and [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison) in play on your turn.
-> - You Activate and resolve [{BT10-051 Goku Black, Future Decimator}](./BT10-051.d)'s [Activate main]
-> - You Activate [{BT10-035 Zen-Oh, Cosmic Unison}](#BT10-035-Zen-Oh-Cosmic-Unison)'s +2 marker ability
->  - The top card of your deck is **NOT** a mono-blue 〈Zamasu〉 or 〈Goku Black〉 card
->  - You are unable to add the card to your energy, it is sent to the drop.
->  - You cannot add any more cards to your energy for the rest of the turn
->  - At the end of the turn because you did not add a card to your energy with this effect you do nothing.
+>  - You are not allowed to add any cards to your energy and thus do not take any cards from the top of your deck
+
 
 Sources: 
 
@@ -84,14 +67,14 @@ Sources:
 #### Q1
 > You activate this card’s [+2] activate skill. If {BT1-044 Whis, The Resting Attendant}’s auto skill activates later that same turn, can you place the top card of your deck in your energy with it?
 
-![Whis, The Resting Attendant](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-044.png)
+![Whis, The Resting Attendant](http://www.mdbs-cardgame.com/images/cardlist/cardimg/BT1-044.png)
 
 Answer
 >  No, you can’t.
 #### Q2
 > At the end of a turn in which you activated this card’s [+2] skill, can you add the top 2 cards of your deck to your life with {EX08-04 SS Gogeta, All-Out Assault}’s auto skill?
 
-![SS Gogeta, All-Out Assault](http://www.dbs-cardgame.com/images/cardlist/cardimg/EX08-04.png)
+![SS Gogeta, All-Out Assault](http://www.mdbs-cardgame.com/images/cardlist/cardimg/EX08-04.png)
 
 Answer
 >  No, you can’t.
@@ -103,5 +86,5 @@ Answer
 
 
 
-[1]: http://www.dbs-cardgame.com/us-en/rule/card_faq.php
-[2]: http://www.dbs-cardgame.com/pdf/rulemanual.pdf?ver_1.18_2
+[1]: http://www.mdbs-cardgame.com/us-en/rule/card_faq.php
+[2]: http://www.mdbs-cardgame.com/pdf/rulemanual.pdf?ver_1.18_2
