--- a/cards/BT10-035.md
+++ b/cards/BT10-035.md
@@ -1,5 +1,5 @@
 #  BT10-035 Zen-Oh, Cosmic Unison
-![Zen-Oh, Cosmic Unison](http://www.mdbs-cardgame.com/images/cardlist/cardimg/BT10-035.png)
+![Zen-Oh, Cosmic Unison](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT10-035.png)
 
 [Back To Card List](./index.md)
 ### Details 
@@ -67,14 +67,14 @@ Sources:
 #### Q1
 > You activate this card’s [+2] activate skill. If {BT1-044 Whis, The Resting Attendant}’s auto skill activates later that same turn, can you place the top card of your deck in your energy with it?
 
-![Whis, The Resting Attendant](http://www.mdbs-cardgame.com/images/cardlist/cardimg/BT1-044.png)
+![Whis, The Resting Attendant](http://www.dbs-cardgame.com/images/cardlist/cardimg/BT1-044.png)
 
 Answer
 >  No, you can’t.
 #### Q2
 > At the end of a turn in which you activated this card’s [+2] skill, can you add the top 2 cards of your deck to your life with {EX08-04 SS Gogeta, All-Out Assault}’s auto skill?
 
-![SS Gogeta, All-Out Assault](http://www.mdbs-cardgame.com/images/cardlist/cardimg/EX08-04.png)
+![SS Gogeta, All-Out Assault](http://www.dbs-cardgame.com/images/cardlist/cardimg/EX08-04.png)
 
 Answer
 >  No, you can’t.
